# EVE_Rebellion

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTROLLER_DESIGN.md  DEVIL_BLADE_REBOOT_CORRECTED.md  DISCLAIMER.md  EVEScript.txt  EVE_Rebellion.spec  GODOT_UNITY_BINDINGS.md  INSTALL.md  INTEGRATION_GUIDE.md  INTEGRATION_SCRIPT_GUIDE.md  LICENSE  MANIFEST.in  MinmatarRebellion.desktop  MinmatarRebellion.desktop.template  NO_MOUSE_AUDIT.md  QUICKSTART.md  QUICK_INTEGRATION.md  QUICK_REFERENCE.md  README.md  README_AUTOMATION.md  RUN_THIS.sh  SETUP_GUIDE.md  abyssal_mode.py  achievements.json  ai_behaviors.py  arcade_combat.py  arcade_effects.py  asset_manager.py  berserk_system.py  build_exe.bat  build_exe.sh  cinematic_system.py  constants.py  (+65 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-exe.yml  ci.yml  deploy.yml  release.yml  stale.yml  test.yml
assets/: ARCHITECTURE.md  TECHNICAL_HIGHLIGHTS.md
assets/diagrams/: game-flow.md
assets/minmatar_rebellion/: BUILD_EXE.md  CHANGELOG_V2.md  EVE_SHIPS_README.md  IMPLEMENTATION_STATUS.md  INSTALL.bat  PLAY.bat  PLAY_GAME.bat  QUICKSTART.md  (+14 more)
build-notes/: BUILD.md  METRICS.md
config/: accessibility.json  controls.json  options.json  ship_roster_complete.json
core/: __init__.py  controls.py  loader.py  pause_menu.py  save_manager.py  tutorial.py
data/: tutorial.json
docs/: WORKFLOWS.md  development.md
enemies/: __init__.py
expansion/: __init__.py  capital_ship_enemy.py  upgrade_screen.py
minmatar_rebellion/: constants.py  sounds.py  sprites.py
powerups/: __init__.py
saves/: save1.json
scripts/: check_stl.py  render_stl_topdown.py
stages/: __init__.py
tests/: __init__.py  test_ai_behaviors.py  test_basic.py  test_berserk_system.py  test_constants.py  test_high_scores.py  test_ship_roster.py  test_wave_patterns.py
(+12 files in other folders)
